...
            dismissOnClickOutside = true,
        ),
        modifier = Modifier
            .weight(0.5f)
            .heightIn(max = FwTheme.dimens.standard256)
            .background(FwTheme.colors.whites.secondary)
            .testTag("text_input_suggestions"),
        expanded = true,
        onDismissRequest = handleOnDismissRequested,
    ) {
        suggestions.forEach {
            DropdownMenuItem(
                onClick = { handleSuggestionSelected(it) },
...
