...
                .indicatorLine(true, error.isError(), interactionSource, textFieldColors)
                .fillMaxWidth()
                .onFocusChanged {
                    onFocusChange?.invoke(it.isFocused)
                    isFocused = it.isFocused
                }
                .testTag("text_input"),
            keyboardOptions = KeyboardOptions.Default.copy(
                capitalization = capitalization,
                keyboardType = keyboardType,
                imeAction = imeAction,
            ),
            keyboardActions = KeyboardActions(onDone = {
...
