...
            .background(
                color = FwTheme.colors.greys.light.copy(
                    alpha = .35f,
                ),
                shape = RoundedCornerShape(FwTheme.dimens.standard8),
            )
            .testTag("shimmer_space")

        Box(Modifier.fillMaxWidth(0.50f).then(placeholderModifier)) { SimmerEffect() }
        Spacer(Modifier.height(FwTheme.dimens.standard4))
        Box(Modifier.fillMaxWidth(0.75f).then(placeholderModifier)) { SimmerEffect() }
        Spacer(Modifier.height(FwTheme.dimens.standard4))
        Box(Modifier.fillMaxWidth(0.75f).then(placeholderModifier)) { SimmerEffect() }
...
