...
    text: String,
    style: TextStyle? = null,
) {
    Text(
        text = text,
        style = style ?: TdTheme.typography.titleMedium,
        modifier = Modifier.testTag("nav_bar_title"),
        maxLines = 1,
        overflow = TextOverflow.Ellipsis,
    )
}

@Composable
...
