...
            val tint: Color? = null,
        ) : Action(onClick) {

            @Composable
            override fun Content() {
                Box(
                    modifier = Modifier.testTag("nav_bar_action"),
                ) {
                    IconButton(
                        onClick = onClick,
                    ) {
                        Icon(
                            painter = icon,
...
