...
                    .background(
                        color = FwTheme.colors.whites.secondary.copy(
                            alpha = .5f,
                        ),
                        shape = RoundedCornerShape(FwTheme.dimens.standard12),
                    )
                    .testTag("decrement_icon_button")
                    .padding(FwTheme.dimens.standard4),
                onClick = onClickDecrement,
                enabled = numberOfDays > 2,
            ) {
                Icon(
                    painter = rememberVectorPainter(vectorResource(Res.drawable.ic_decrement)),
...
                    .background(
                        color = FwTheme.colors.whites.secondary.copy(
                            alpha = .5f,
                        ),
                        shape = RoundedCornerShape(FwTheme.dimens.standard12),
                    )
                    .testTag("increment_icon_button")
                    .padding(FwTheme.dimens.standard4),
                onClick = onClickIncrement,
                enabled = numberOfDays < 10,
            ) {
                Icon(
                    painter = rememberVectorPainter(vectorResource(Res.drawable.ic_increment)),
...
